--- a/css/styles.css
+++ b/css/styles.css
@@ -1,85 +1,24 @@
-<style>
-  /* Navbar styles */
-  
-  .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-  }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
 
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .brand a {
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 20px;
-  }
+.menu li {
+  display: inline-block;
+  margin-right: 10px;
+}
 
-  .menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-
-  .menu li {
-    margin-right: 20px;
-  }
-
-  .menu li a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-  .toggle-button {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-  }
-
-  .bar {
-    width: 25px;
-    height: 3px;
-    background-color: #fff;
-    margin-bottom: 5px;
-  }
-
-  /* Media query for responsive navigation */
-
-  @media (max-width: 768px) {
-    .menu {
-      display: none;
-    }
-
-    .toggle-button {
-      display: flex;
-    }
-
-    .navbar.expanded .menu {
-      display: flex;
-      flex-direction: column;
-      background-color: #333;
-      padding: 20px;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      width: 100%;
-    }
-
-    .navbar.expanded .menu li {
-      margin-bottom: 10px;
-    }
-  }
-</style>
+.menu li a {
+  text-decoration: none;
+  color: #333;
+}
