--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,5 +1,5 @@
 
-@media (max-width: 1400px) {
+@media screen and (max-width: 1400px) {
   #profile {
     height: 83vh;
     margin-bottom: 6rem;
@@ -13,7 +13,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
   }
@@ -48,7 +48,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #contact,
   footer {
     height: 40vh;
